--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,10 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+html{
+  background-color:#57c5fa;
+  background:linear-gradient(#57c5fa,#0a81fe);
+}
 
 a {
   color: inherit;
