--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@ body {
   font-family: 'Kanit', sans-serif;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #001e3c;
 }
 html{
   /*background-color:#57c5fa;
